# ai_chat_mini

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  video submissions.txt
api/: Dockerfile  chat_handler.py  config.py  llm_service.py  main.py  mcp_client.py  models.py  pyproject.toml  requirements.txt
api/rag/: __init__.py  adapter.py  models.py  pipeline.py  t01_input_guardrails.py  t02_query_rewriting.py  t03_multi_query.py  t04_self_query.py  t05_llm_as_a_judge.py  t06_output_guardrails.py
api/scripts/: smoke_test.py
app/: globals.css  layout.tsx  page.tsx
components/: ChatInput.tsx  ChatWindow.tsx  Header.tsx  MessageBubble.tsx  TypingIndicator.tsx
docs/: demo-scenarios.md
lib/: api.ts  types.ts
